Bug#6951: Triggers/Traditional: SET @ result wrong

While executing a trigger, we have to set thd->abort_on_warning to the value
it had at trigger creation time.